# Bot-auto-click-Tap-Wizard-2

./: .gitignore  app.py  build.py  build.sh  main.py  pyproject.toml  readme.md  requirements.txt  run.cmd  setup.py  setup1.py  sub_test.py
.github/workflows/: windows-exe.yml
bot_auto_click_tap_wizard_2/: main.py
tests/: test_bot_auto_click_tap_wizard_2.py
